[package]
name = "tracing-logging"
version = "0.1.0"
authors = ["Victor Ermolaev <victorermolaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features= [ "time", "rt-core", "macros" ] }
futures = "0.3.5"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
tracing-opentelemetry = "0.7.0"
opentelemetry = "0.8.0"
opentelemetry-jaeger = "0.7.0"
rand_distr = "0.3.0"
rand = "0.7.3"
